fixed crash